# zz_synth

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  coding_style.txt
examples/: CMakeLists.txt
examples/adsr_envelope_note/: CMakeLists.txt  Makefile  adsr_envelope_note.cc
examples/ar_envelope_note/: CMakeLists.txt  Makefile  ar_envelope_note.cc
examples/fm_waveforms/: CMakeLists.txt  Makefile  fm_waveforms.cc
examples/pa/: CMakeLists.txt  callback.cpp
examples/plain_note/: CMakeLists.txt  Makefile  plain_note.cc
examples/waveforms/: CMakeLists.txt  Makefile  waveforms.cc
include/: compiler_flags_clang.mk  compiler_flags_gcc.mk  zz_SynthConfig.h  zz_WavFile.h  zz_global.h  zz_synth.cfg  zz_synth.mk  zz_synth_config.h  zz_synth_rules.mk
include/common/: envelope.h  oscillator.h  segment.h  synth_config.h  wave_file.h  zz_SynthConfig.h  zz_WavFile.h  zz_WaveFile.h  zz_global.h  zz_global_include.h
include/envelope/: envelope.h  segment.h
include/fm_synthesiser/: fm_synthesiser.h
include/global/: global_include.h  global_variables.h
include/oscillator/: oscillator.h
src/: CMakeLists.txt
src/common/: .Makefile.swp  CMakeLists.txt  Makefile  envelope.cc  oscillator.cc  segment.cc  synth_config.cc  wave_file.cc  zz_SynthConfig  zz_SynthConfig.cc  zz_WaveFile.cc  zz_global.cc
src/envelope/: CMakeLists.txt  Makefile  envelope.cc  segment.cc
src/fm_synthesiser/: CMakeLists.txt  Makefile  fm_synthesiser.cc
src/global/: CMakeLists.txt  Makefile  global_variables.cc
src/oscillator/: CMakeLists.txt  Makefile  oscillator.cc
template_files/: Makefile  class_name.cc  class_name.h  testbench.cc
templates/: class_name.cc  class_name.h
unit_tests/: CMakeLists.txt
unit_tests/envelope/: CMakeLists.txt  Makefile  testbench.cc
unit_tests/envelope_generation/: Makefile  testbench.cc
unit_tests/fm_synthesiser/: CMakeLists.txt  Makefile  testbench.cc
unit_tests/oscillator/: CMakeLists.txt  Makefile  testbench.cc
unit_tests/read_write_wav/: CMakeLists.txt  Makefile  testbench.cc  testbench.cpp
unit_tests/segment/: CMakeLists.txt  Makefile  testbench.cc
unit_tests/source/: envelope.cc  fm_synthesiser.cc  main.cc  oscillator.cc  read_write_wav.cc  segment.cc
